[package]
name = "rndr"
version = "0.1.0"
description = "RNDR Solana Program"
authors = ["Jordan Sexton <jordan.sexton@solana.com>"]
repository = "https://github.com/jordansexton/rndr"
license = "Apache-2.0"
edition = "2018"

[features]
no-entrypoint = []
test-bpf = []

[dependencies]
arrayref = "0.3.6"
num-derive = "0.3"
num_enum = "0.5.1"
num-traits = "0.2"
solana-program = "1.7.4"
spl-associated-token-account = { version = "1.0.2", features = [ "no-entrypoint" ] }
spl-token = { version = "3.1.1", features = [ "no-entrypoint" ] }
thiserror = "1.0"

[dev-dependencies]
solana-program-test = "1.7.4"
solana-sdk = "1.7.4"

[lib]
crate-type = ["cdylib", "lib"]
